--- a/templates/index.html
+++ b/templates/index.html
@@ -7,38 +7,43 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background: url("{{ url_for('static', filename='hp_background.jpg') }}") no-repeat center center fixed;
+            background-size: cover;
             text-align: center;
             padding: 20px;
         }
         h1 {
-            color: #333;
+            color: white;
+            font-weight: bold;
+            text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black, 2px 2px 0 black;
         }
         .container {
             max-width: 600px;
             margin: 20px auto;
-            background: white;
+            background: gray;
             padding: 15px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgb(255, 255, 255);
         }
         button {
-            background-color: #28a745;
-            color: white;
+            background-color: whitesmoke;
+            color: #A67B5B; /* Flat Dark Earth Color */
             border: none;
             padding: 10px 15px;
             margin: 10px;
             cursor: pointer;
             border-radius: 5px;
             font-size: 16px;
+            transition: background-color 0.3s, color 0.3s;
         }
         button:hover {
-            background-color: #218838;
+            background-color: black;
+            color: white;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to the Hunting Calls App</h1>
+    <h1>Game Calls</h1>
     <div class="container">
         <h2>Select a Game</h2>
         <button onclick="redirectTo('turkey')">Turkey</button>
