--- a/templates/turkey_calls.html
+++ b/templates/turkey_calls.html
@@ -126,6 +126,12 @@
             audio.loop = false; // Stop looping
             progressBars.forEach(progress => progress.value = 0);
         }
+        if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/static/service-worker.js')
+        .then(() => console.log('Service Worker Registered'))
+        .catch(error => console.log('Service Worker Registration Failed', error));
+}
+
     </script>
 </body>
 </html>
